# homework_10-2

./: README.md  pyproject.toml
decorators/: logger.py  test_logger.py
src/: generators.py
src/masks/: masks.py
src/processing/: __init__.py  processing.py
src/widget/: widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
