[tool.poetry]
name = "homework-10-2"
version = "0.1.0"
description = ""
authors = ["Ra66i <rabbi_crutoy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119

[tool.isort]
line_length = 119
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]